tests/snapshots/advisories__advisories::detects_yanked.snap
---
source: tests/advisories.rs
expression: diags
---
[
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "ammonia",
            "version": "0.7.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "advisories",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 4,
          "message": "yanked version",
          "span": "ammonia 0.7.0 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "detected yanked crate",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "ammonia",
            "version": "1.2.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "artifact_serde",
                "version": "0.3.1"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "advisories",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 5,
          "message": "yanked version",
          "span": "ammonia 1.2.0 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "detected yanked crate",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "yanked",
      "graphs": [
        {
          "Krate": {
            "name": "spdx",
            "version": "0.3.1"
          },
          "parents": [
            {
              "Krate": {
                "name": "advisories",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 154,
          "message": "yanked version",
          "span": "spdx 0.3.1 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "detected yanked crate",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
