tests/snapshots/advisories__detects_unmaintained.snap
---
source: tests/advisories.rs
expression: "advisories_by_kind(diags, \"unmaintained\")"
---
[
  {
    "fields": {
      "advisory": {
        "aliases": [],
        "categories": [],
        "collection": "crates",
        "cvss": null,
        "date": "2016-09-10",
        "description": "The `libusb` crate has not seen a release since September 2016, and its author\nis unresponsive.\n\nThe `rusb` crate is a maintained fork:\n\nhttps://github.com/a1ien/rusb",
        "expect-deleted": false,
        "id": "RUSTSEC-2016-0004",
        "informational": "unmaintained",
        "keywords": [],
        "license": "CC0-1.0",
        "package": "libusb",
        "references": [],
        "related": [],
        "source": null,
        "title": "libusb is unmaintained; use rusb instead",
        "url": "https://github.com/dcuddeback/libusb-rs/issues/33",
        "withdrawn": null
      },
      "code": "unmaintained",
      "graphs": [
        {
          "Krate": {
            "name": "libusb",
            "version": "0.3.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "advisories",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 67,
          "message": "unmaintained advisory detected",
          "span": "libusb 0.3.0 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "libusb is unmaintained; use rusb instead",
      "notes": [
        "ID: RUSTSEC-2016-0004",
        "Advisory: https://rustsec.org/advisories/RUSTSEC-2016-0004",
        "The `libusb` crate has not seen a release since September 2016, and its author\nis unresponsive.\n\nThe `rusb` crate is a maintained fork:\n\nhttps://github.com/a1ien/rusb",
        "Announcement: https://github.com/dcuddeback/libusb-rs/issues/33",
        "Solution: No safe upgrade is available!"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "advisory": {
        "aliases": [
          "CVE-2019-25010",
          "CVE-2020-25575",
          "GHSA-jq66-xh47-j9f3",
          "GHSA-r98r-j25q-rmpr"
        ],
        "categories": [],
        "collection": "crates",
        "cvss": "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H",
        "date": "2020-05-02",
        "description": "The `failure` crate is officially end-of-life: it has been marked as deprecated\nby the former maintainer, who has announced that there will be no updates or\nmaintenance work on it going forward.\n\nThe following are some suggested actively developed alternatives to switch to:\n\n- [`anyhow`](https://crates.io/crates/anyhow)\n- [`eyre`](https://crates.io/crates/eyre)\n- [`fehler`](https://crates.io/crates/fehler)\n- [`snafu`](https://crates.io/crates/snafu)\n- [`thiserror`](https://crates.io/crates/thiserror)",
        "expect-deleted": false,
        "id": "RUSTSEC-2020-0036",
        "informational": "unmaintained",
        "keywords": [],
        "license": "CC0-1.0",
        "package": "failure",
        "references": [],
        "related": [],
        "source": null,
        "title": "failure is officially deprecated/unmaintained",
        "url": "https://github.com/rust-lang-nursery/failure/pull/347",
        "withdrawn": null
      },
      "code": "unmaintained",
      "graphs": [
        {
          "Krate": {
            "name": "failure",
            "version": "0.1.8"
          },
          "parents": [
            {
              "Krate": {
                "name": "advisories",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 30,
          "message": "unmaintained advisory detected",
          "span": "failure 0.1.8 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "failure is officially deprecated/unmaintained",
      "notes": [
        "ID: RUSTSEC-2020-0036",
        "Advisory: https://rustsec.org/advisories/RUSTSEC-2020-0036",
        "The `failure` crate is officially end-of-life: it has been marked as deprecated\nby the former maintainer, who has announced that there will be no updates or\nmaintenance work on it going forward.\n\nThe following are some suggested actively developed alternatives to switch to:\n\n- [`anyhow`](https://crates.io/crates/anyhow)\n- [`eyre`](https://crates.io/crates/eyre)\n- [`fehler`](https://crates.io/crates/fehler)\n- [`snafu`](https://crates.io/crates/snafu)\n- [`thiserror`](https://crates.io/crates/thiserror)",
        "Announcement: https://github.com/rust-lang-nursery/failure/pull/347",
        "Solution: No safe upgrade is available!"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "advisory": {
        "aliases": [],
        "categories": [],
        "collection": "crates",
        "cvss": null,
        "date": "2024-09-01",
        "description": "This crate is no longer maintained, and the author recommends using the maintained [`web-time`] crate instead.\n\n[`web-time`]: https://crates.io/crates/web-time",
        "expect-deleted": false,
        "id": "RUSTSEC-2024-0384",
        "informational": "unmaintained",
        "keywords": [],
        "license": "CC0-1.0",
        "package": "instant",
        "references": [
          "https://crates.io/crates/instant/0.1.13",
          "https://github.com/sebcrozet/instant/issues/52"
        ],
        "related": [],
        "source": null,
        "title": "`instant` is unmaintained",
        "url": null,
        "withdrawn": null
      },
      "code": "unmaintained",
      "graphs": [
        {
          "Krate": {
            "name": "instant",
            "version": "0.1.10"
          },
          "parents": [
            {
              "Krate": {
                "name": "fastrand",
                "version": "1.4.1"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "lettre",
                    "version": "0.10.0-rc.3"
                  },
                  "parents": [
                    {
                      "Krate": {
                        "name": "advisories",
                        "version": "0.1.0"
                      }
                    }
                  ]
                }
              ]
            },
            {
              "Krate": {
                "name": "parking_lot",
                "version": "0.11.1"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "r2d2",
                    "version": "0.8.9"
                  },
                  "parents": [
                    {
                      "Krate": {
                        "name": "lettre",
                        "version": "0.10.0-rc.3"
                      },
                      "repeat": true
                    }
                  ]
                },
                {
                  "Krate": {
                    "name": "scheduled-thread-pool",
                    "version": "0.2.5"
                  },
                  "parents": [
                    {
                      "Krate": {
                        "name": "r2d2",
                        "version": "0.8.9"
                      },
                      "repeat": true
                    }
                  ]
                },
                {
                  "Krate": {
                    "name": "trust-dns-resolver",
                    "version": "0.20.4"
                  },
                  "parents": [
                    {
                      "Krate": {
                        "name": "advisories",
                        "version": "0.1.0"
                      },
                      "repeat": true
                    }
                  ]
                }
              ]
            },
            {
              "Krate": {
                "name": "parking_lot_core",
                "version": "0.8.3"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "parking_lot",
                    "version": "0.11.1"
                  },
                  "repeat": true
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 1,
          "line": 58,
          "message": "unmaintained advisory detected",
          "span": "instant 0.1.10 registry+https://github.com/rust-lang/crates.io-index"
        }
      ],
      "message": "`instant` is unmaintained",
      "notes": [
        "ID: RUSTSEC-2024-0384",
        "Advisory: https://rustsec.org/advisories/RUSTSEC-2024-0384",
        "This crate is no longer maintained, and the author recommends using the maintained [`web-time`] crate instead.\n\n[`web-time`]: https://crates.io/crates/web-time",
        "Solution: No safe upgrade is available!"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
